fix bottom text line cutoff and add watchlist icon to each card

--- a/src/components/anime/AnimeCardFlipped.module.css
+++ b/src/components/anime/AnimeCardFlipped.module.css
@@ -21,8 +21,8 @@
     opacity: 1;
     position: relative;
     z-index: 1;
-    padding: 0.5rem 0.8rem;
-
+    padding: 0.5rem 0.9rem 0;
+    
 }
 
 .flippedContainer img {
@@ -37,6 +37,15 @@
 .noDisplay {
     display: none;
     transition: 0.5s;
+}
+
+.iconsContainer {
+    opacity: 2;
+    display: flex;
+    gap: 15px;
+    padding-left: 0.9rem;
+    position: absolute;
+    bottom: -5px;
 }
 
 @keyframes opac {
